[project]
name = "smartmail-env"
version = "1.0.0"
description = "Real-world email triage environment for OpenEnv hackathon"
requires-python = ">=3.10"

dependencies = [
    "pydantic",
    "openai",
    "openenv-core",
    "huggingface_hub"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"